# adventOfCode

./: .gitignore  Cargo.toml  ReadMe.md  helper.sh
.github/actions/install_deps/: action.yaml
.github/workflows/: ci.yml  main.yml
2022/aoc221/: Cargo.toml  task.md
2022/aoc221/src/: main.rs
2022/aoc2210/: Cargo.toml
2022/aoc2210/src/: main.rs
2022/aoc2211/: Cargo.toml
2022/aoc2212/: Cargo.toml
2022/aoc2213/: Cargo.toml
2022/aoc2214/: Cargo.toml
2022/aoc2215/: Cargo.toml
2022/aoc2216/: Cargo.toml
2022/aoc2217/: Cargo.toml
2022/aoc2218/: Cargo.toml
2022/aoc2219/: Cargo.toml
2022/aoc222/: Cargo.toml  task.md
2022/aoc2220/: Cargo.toml
2022/aoc2221/: Cargo.toml
2022/aoc2222/: Cargo.toml
2022/aoc2223/: Cargo.toml
2022/aoc2225/: Cargo.toml
2022/aoc223/: Cargo.toml  task.md
2022/aoc224/: Cargo.toml  task.md
2022/aoc225/: Cargo.toml  task.md
2022/aoc226/: Cargo.toml
2022/aoc227/: Cargo.toml
2022/aoc228/: Cargo.toml
2022/aoc229/: Cargo.toml
aoc15/src/: day1.rs  day2.rs  day3.rs  day8 copy.rs  lib.rs  main.rs  template.rs
aoc15/tasks/: 1.md  2.md  3.md
aoc22/: Cargo.toml
aoc22/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8 copy.rs  day8.rs  day9.rs  lib.rs  main.rs  template.rs
aoc22/tasks/: 1.md  10.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
aoc23/: Cargo.toml
aoc23/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  template.rs
(+25 files in other folders)
