[workspace]
members = [
    "2022/aoc221",
    "2022/aoc222",
    "2022/aoc223",
    "2022/aoc224",
    "2022/aoc225",
    "2022/aoc226",
    "2022/aoc227",
    "2022/aoc228",
    "2022/aoc229",
    "2022/aoc2210",
    "2022/aoc2211",
    "2022/aoc2212",
    "2022/aoc2213",
    "2022/aoc2214",
    "2022/aoc2215",
    "2022/aoc2216",
    "2022/aoc2217",
    "2022/aoc2218",
    "2022/aoc2219",
    "2022/aoc2220",
    "2022/aoc2221",
    "2022/aoc2222",
    "2022/aoc2223",
    "2022/aoc2224",
]
